<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSmoke"
    tools:context=".MainActivity">

    <View
        android:id="@+id/font_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp71"
        android:background="@color/melrose"
        app:layout_constraintTop_toBottomOf="@id/background" />

    <View
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp0"
        android:background="@color/melrose"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp0"
        android:layout_marginTop="@dimen/dp42"
        android:layout_marginEnd="@dimen/dp63"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/background_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_box"
        android:layout_width="@dimen/dp183"
        android:layout_height="@dimen/dp46"
        android:layout_marginStart="@dimen/dp33"
        android:layout_marginBottom="@dimen/dp2"
        android:autofillHints=""
        android:background="@drawable/search_box"
        android:hint="@string/search"
        android:inputType="text"
        android:paddingStart="@dimen/dp62"
        android:textColorHint="@color/ghost"
        android:textSize="@dimen/sp12"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,RtlSymmetry" />

    <ImageView
        android:layout_width="@dimen/dp21"
        android:layout_height="@dimen/dp21"
        android:layout_marginStart="@dimen/dp27"
        android:background="@drawable/ic_search"
        android:contentDescription="@string/search_box"
        app:layout_constraintBottom_toBottomOf="@id/search_box"
        app:layout_constraintStart_toStartOf="@id/search_box"
        app:layout_constraintTop_toTopOf="@id/search_box" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp32"
        android:layout_marginTop="@dimen/dp55"
        android:layout_marginEnd="@dimen/dp139"
        android:fontFamily="sans-serif-black"
        android:text="@string/meditation"
        android:textColor="@color/midnightExpress"
        android:textSize="@dimen/sp28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background" />

    <View
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp71"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/calendar"
        android:layout_width="@dimen/dp25"
        android:layout_height="@dimen/dp25"
        android:layout_marginStart="@dimen/dp49"
        android:layout_marginBottom="@dimen/dp35"
        android:background="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setting"
        android:layout_width="@dimen/dp26"
        android:layout_height="@dimen/dp26"
        android:layout_marginTop="@dimen/dp1"
        android:layout_marginEnd="@dimen/dp54"
        android:background="@drawable/ic_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/calendar" />

    <Button
        android:id="@+id/exercise"
        android:layout_width="@dimen/dp41"
        android:layout_height="@dimen/dp21"
        android:layout_marginTop="@dimen/dp4"
        android:background="@drawable/ic_weight"
        app:layout_constraintEnd_toStartOf="@id/setting"
        app:layout_constraintStart_toEndOf="@id/calendar"
        app:layout_constraintTop_toTopOf="@id/calendar" />

    <TextView
        android:id="@+id/calendar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp3"
        android:text="@string/today"
        android:textColor="@color/bayOfMany"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="@id/calendar"
        app:layout_constraintStart_toStartOf="@id/calendar"
        app:layout_constraintTop_toBottomOf="@id/calendar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp3"
        android:text="@string/all_exercises"
        android:textColor="@color/watusi"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="@id/exercise"
        app:layout_constraintStart_toStartOf="@id/exercise"
        app:layout_constraintTop_toBottomOf="@id/exercise" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp1"
        android:text="@string/settings"
        android:textColor="@color/bayOfMany"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="@id/setting"
        app:layout_constraintStart_toStartOf="@id/setting"
        app:layout_constraintTop_toBottomOf="@id/setting" />

    <!--<androidx.recyclerview.widget.RecyclerView-->
        <!--android:id="@+id/recyclerViewNew"-->
        <!--android:layout_marginEnd="@dimen/dp9"-->
        <!--android:layout_marginBottom="@dimen/dp7"-->
        <!--app:layout_constraintBottom_toTopOf="@id/footer"-->
        <!--android:layout_marginTop="@dimen/dp50"-->
        <!--android:layout_marginStart="@dimen/dp28"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@id/search_box"-->
        <!--android:layout_width="@dimen/dp0"-->
        <!--android:layout_height="@dimen/dp0" />-->
    <include
        layout="@layout/scroll"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp0"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp31"
        android:layout_marginEnd="3dp"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_box" />

    <TextView
        android:id="@+id/sub_title"
        android:textStyle="bold"
        android:textColor="@color/gulfBlue"
        android:text="@string/_3_10_min_course"
        android:fontFamily="sans-serif-medium"
        android:textSize="@dimen/sp14"
        android:layout_marginTop="@dimen/dp19"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginEnd="@dimen/dp98"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/contentn"
        android:lineSpacingExtra="@dimen/sp7"
        android:letterSpacing="0.04"
        android:textColor="@color/midnightExpress"
        android:textSize="@dimen/sp12"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintStart_toStartOf="@id/sub_title"
        android:id="@+id/description"
        app:layout_constraintTop_toBottomOf="@id/sub_title"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="@dimen/dp180"
        android:layout_height="@dimen/dp0"
        android:layout_marginTop="@dimen/dp46"
        android:layout_marginEnd="@dimen/dp0"
        android:layout_marginBottom="@dimen/dp62"
        android:adjustViewBounds="true"
        android:contentDescription="@string/anything"
        android:src="@drawable/font_img"
        app:layout_constraintBottom_toBottomOf="@id/font_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>