<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/p_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navyBlue">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#73000000" />

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="@dimen/dp134"
        android:layout_width="@dimen/dp142"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_icon"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_marginEnd="@dimen/dp46"
        android:layout_marginStart="@dimen/dp46"
        android:layout_marginTop="@dimen/dp86"
        android:paddingStart="@dimen/dp46"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        android:inputType="text"
        android:id="@+id/email"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp86"
        android:background="@drawable/input_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        tools:ignore="LabelFor,RtlSymmetry,TextFields"
        android:autofillHints="" />

    <EditText
        app:layout_goneMarginTop="@dimen/dp86"
        android:layout_marginTop="@dimen/dp19"
        android:paddingStart="@dimen/dp46"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp86"
        android:background="@drawable/input_box"
        app:layout_constraintEnd_toEndOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/email"
        tools:ignore="LabelFor,RtlSymmetry"
        android:autofillHints="" />

    <TextView
        android:layout_marginTop="@dimen/dp19"
        android:gravity="center_vertical"
        android:id="@+id/login"
        android:background="@drawable/login_box"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp86"
        android:text="@string/login_button"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp20"
        app:layout_constraintEnd_toEndOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <View
        android:id="@+id/or_line_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintBottom_toTopOf="@id/create_button"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <View
        android:id="@+id/or_border"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:background="@color/navyBlue"
        app:layout_constraintBottom_toTopOf="@id/create_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <TextView
        android:id="@+id/or"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp0"
        android:background="#73000000"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        app:layout_constraintBottom_toBottomOf="@id/or_border"
        app:layout_constraintEnd_toEndOf="@id/or_border"
        app:layout_constraintStart_toStartOf="@id/or_border"
        app:layout_constraintTop_toTopOf="@id/or_border" />

    <TextView
        android:layout_marginTop="@dimen/dp100"
        android:id="@+id/create_button"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp86"
        android:background="@drawable/create_account_box"
        android:gravity="center_vertical"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintEnd_toEndOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"/>


</androidx.constraintlayout.widget.ConstraintLayout>