<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSmoke"
    tools:context=".MainActivity">

    <View
        android:id="@+id/font_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp71"
        android:background="@color/watusi"
        app:layout_constraintTop_toBottomOf="@id/background" />

    <View
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp0"
        android:background="@color/watusi"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu"
        android:layout_width="@dimen/dp52"
        android:layout_height="@dimen/dp52"
        android:layout_marginTop="@dimen/dp38"
        android:layout_marginEnd="@dimen/dp27"
        android:background="@drawable/ic_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp0"
        android:layout_marginTop="@dimen/dp42"
        android:layout_marginEnd="@dimen/dp63"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_box"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp46"
        android:layout_marginStart="@dimen/dp33"
        android:layout_marginEnd="@dimen/dp33"
        android:layout_marginBottom="@dimen/dp32"
        android:autofillHints=""
        android:background="@drawable/search_box"
        android:hint="@string/search"
        android:inputType="text"
        android:paddingStart="@dimen/dp62"
        android:textColorHint="@color/ghost"
        android:textSize="@dimen/sp12"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,RtlSymmetry" />

    <ImageView
        android:layout_width="@dimen/dp21"
        android:layout_height="@dimen/dp21"
        android:layout_marginStart="@dimen/dp27"
        android:background="@drawable/ic_search"
        android:contentDescription="@string/search_box"
        app:layout_constraintBottom_toBottomOf="@id/search_box"
        app:layout_constraintStart_toStartOf="@id/search_box"
        app:layout_constraintTop_toTopOf="@id/search_box" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp40"
        android:layout_marginTop="@dimen/dp55"
        android:layout_marginEnd="@dimen/dp139"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_example"
        android:textColor="@color/midnightExpress"
        android:textSize="@dimen/sp28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background" />

    <View
        android:layout_width="@dimen/dp26"
        android:layout_height="@dimen/dp50"
        android:layout_marginBottom="@dimen/dp48"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@id/font_color"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp71"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/calendar"
        android:layout_width="@dimen/dp25"
        android:layout_height="@dimen/dp25"
        android:layout_marginStart="@dimen/dp49"
        android:layout_marginBottom="@dimen/dp35"
        android:background="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setting"
        android:layout_width="@dimen/dp26"
        android:layout_height="@dimen/dp26"
        android:layout_marginTop="@dimen/dp1"
        android:layout_marginEnd="@dimen/dp54"
        android:background="@drawable/ic_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/calendar" />

    <Button
        android:id="@+id/exercise"
        android:layout_width="@dimen/dp41"
        android:layout_height="@dimen/dp21"
        android:layout_marginTop="@dimen/dp4"
        android:background="@drawable/ic_weight"
        app:layout_constraintEnd_toStartOf="@id/setting"
        app:layout_constraintStart_toEndOf="@id/calendar"
        app:layout_constraintTop_toTopOf="@id/calendar" />

    <TextView
        android:id="@+id/calendar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp3"
        android:text="@string/today"
        android:textColor="@color/bayOfMany"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="@id/calendar"
        app:layout_constraintStart_toStartOf="@id/calendar"
        app:layout_constraintTop_toBottomOf="@id/calendar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp3"
        android:text="@string/all_exercises"
        android:textColor="@color/watusi"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="@id/exercise"
        app:layout_constraintStart_toStartOf="@id/exercise"
        app:layout_constraintTop_toBottomOf="@id/exercise" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp1"
        android:text="@string/settings"
        android:textColor="@color/bayOfMany"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="@id/setting"
        app:layout_constraintStart_toStartOf="@id/setting"
        app:layout_constraintTop_toBottomOf="@id/setting" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_marginEnd="@dimen/dp9"
        android:layout_marginBottom="@dimen/dp7"
        app:layout_constraintBottom_toTopOf="@id/footer"
        android:layout_marginTop="@dimen/dp50"
        android:layout_marginStart="@dimen/dp28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_box"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp0" />

</androidx.constraintlayout.widget.ConstraintLayout>